--- a/Lab-05_2：線上商店訂單系統/Lab-05_2.md
+++ b/Lab-05_2：線上商店訂單系統/Lab-05_2.md
@@ -7,7 +7,7 @@
 - 產品：產品ID、產品名稱、產品描述、單價、庫存數量、供應商名稱、供應商聯絡方式。
 - 訂單：訂單ID、顧客ID、顧客姓名、訂單日期、訂單總金額、產品ID (多個)、產品名稱 (多個)、購買數量 (對應每個產品)、單價 (對應每個產品)。
 
-##任務
+## 任務
 
 #### 1. 分析與正規化
 - 從一個包含所有訂單資訊的單一扁平化表格概念開始 (例如，一張包含所有上述欄位的試算表)。
@@ -20,7 +20,7 @@
 訂單：訂單ID → 顧客ID、顧客姓名、訂單日期、訂單總金額訂單ID、產品ID → 購買數量、單價
 因為訂單中顧客的名字和顧客ID是重複的，因此應該移至顧客表中，這樣可以減少冗餘。
 ```
-#### 2. 分析與說明SSSSS
+#### 2. 分析與說明
 - 說明您的正規化步驟。
 ```
 第一正規化（1NF）：將資料劃分為幾個表格，確保每個表格的資料都是原子性的且無重複欄位。
